[project]
name = "z4j-dramatiq"
version = "1.6.7"
description = "z4j Dramatiq queue engine adapter (Apache 2.0)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "z4j contributors" }]
keywords = ["z4j", "dramatiq", "task", "queue", "redis", "rabbitmq"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "z4j-core>=1.4.0,<2",
    # Dramatiq compatibility policy: operator-chosen primary, wide
    # range. Audit-only adapter; all imports are deferred and target
    # the long-stable get_broker / Message / Middleware / Abortable
    # surface. Abortable existed in 1.13+; broker.flush() / queue
    # counts shape stable since 1.14. The previous >=2.1.0 floor
    # excluded the Dramatiq 1.15 / 1.16 deployed majority for no
    # functional reason. ``<3`` guards a future 3.0 break.
    "dramatiq>=1.14,<3",
]

[project.optional-dependencies]
# Brokers - Dramatiq supports both natively, and z4j-dramatiq's
# multi-broker claim is load-bearing per multi-engine plan §13.3.
# Pick whichever your stack uses; both are first-class.
#
# We defer to the dramatiq broker extras for the redis / rabbitmq
# version ranges rather than duplicating them here, because other
# adapters (notably arq) cap redis differently and duplicating pins
# blows up pip's resolver when both are installed in the same env.
# Relaxed to the same 1.14 floor as the base dep; broker extras
# stay in lockstep with the parent dramatiq pin.
redis = ["dramatiq[redis]>=1.14,<3"]
rabbitmq = ["dramatiq[rabbitmq]>=1.14,<3"]

[project.scripts]
# 1.1.2+ console script. Both ``z4j-dramatiq`` (pip-installed entry
# point) and ``python -m z4j_dramatiq`` (module form) work and
# dispatch to the same code path. Engine adapters are libraries,
# so the CLI is doctor / check / status / version only - no
# ``run`` or ``restart`` (those belong to framework adapters).
z4j-dramatiq = "z4j_dramatiq.cli:main"

[project.urls]
Changelog = "https://github.com/z4jdev/z4j-dramatiq/blob/main/CHANGELOG.md"
Documentation = "https://z4j.dev"
Homepage = "https://z4j.com"
Issues = "https://github.com/z4jdev/z4j-dramatiq/issues"
Source = "https://github.com/z4jdev/z4j-dramatiq"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/z4j_dramatiq"]
